--- a/module4.html
+++ b/module4.html
@@ -17,77 +17,41 @@
 				<li><a href="module1.html"><i class="fas fa-users"></i>Serveur Mutualisé</a></li>
 				<li><a href="module2.html"><i class="fas fa-user"></i>Serveur Dédié</a></li>
 				<li><a href="module3.html"><i class="fas fa-cloud"></i>Solution "Cloud"</a></li>
-				<li><a href="module4.html"><i class="fas fa-envelope"></i>Contact</a></li>
+				<li><a href="module4.html" class="selectionText"><i class="fas fa-envelope selectionIcon"></i>Contact</a></li>
 			</ul>
 		</nav>
 	</header>
-	<section class="principal">
-		<h1>L'hébergement à prix libre</h1>
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-		</p>
-	</section>
 	<main>
 		<div class="containerPink">
 			Que recherchez-vous ?
 		</div>
 		<section class="container">
-			<h2>Notre solution en 3 points</h2>
+			<h2>Contactez-nous</h2>
 			<div>
 				<article>					
-					<h3><i class="fas fa-cogs"></i>Configuration</h3>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.
+					<i class="fas fa-location-arrow fa-2x"></i>
+					<p class="contact">
+						Mail: <span class="pink"><a href="mailto:contact@3wa.fr">contact@3wa.fr</a></span>
+					</p>
+				</article>
+				<article>
+					<i class="fas fa-phone fa-2x"></i>
+					<p class="contact">
+						Tel: <span class="pink">+33 1 40 58 19 72</span>
 					</p>
 				</article>
 				<article>					
-					<h3><i class="fas fa-chart-area"></i>Monitoring</h3>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.
-					</p>
-				</article>
-				<article>					
-					<h3><i class="fas fa-database"></i>Sauvegarde</h3>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.
+					<i class="fas fa-envelope fa-2x"></i>
+					<p class="contact">
+						<span class="bold">MinkGeek</span>
+						<span class="normal">46, rue René Clair</span>
+						<span class="normal">75018 Paris</span>
 					</p>
 				</article>				
 			</div>
 		</section>
-		<section class="container">
-			<h2>Choisissez votre style d'hébergement</h2>
-			<div>
-				<article>					
-					<h3><i class="fas fa-users"></i>Serveur mutualisé</h3>
-					<p class="pink">19€ / mois</p>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.
-					</p>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.
-					</p>
-				</article>
-				<article>					
-					<h3><i class="fas fa-user"></i>Serveur Dédié</h3>
-					<p class="pink">39€ / mois</p>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.
-					</p>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.
-					</p>
-				</article>
-				<article>					
-					<h3><i class="fas fa-cloud"></i>Service Cloud</h3>
-					<p class="pink">49€ / mois</p>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.
-					</p>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.
-					</p>
-				</article>
-			</div>
+		<section>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5668.979656387325!2d2.307492398306544!3d48.86998297299073!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66fc50dc75ccf%3A0x42f0f4fa01438416!2sFranklin%20D.%20Roosevelt!5e0!3m2!1sen!2sfr!4v1585485223993!5m2!1sen!2sfr" width="100%" height="500px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 		</section>
 	</main>
 	<footer>
